--- a/project/Views/KhachHang/DangNhap.cshtml
+++ b/project/Views/KhachHang/DangNhap.cshtml
@@ -16,9 +16,9 @@
                 @* Tên đăng nhập *@
                 <div class="form-group mb-3">
                     <!-- Dùng form-group và mb-3 để tạo khoảng cách -->
-                    <label asp-for="Username" class="form-label"></label><sup>*</sup>
-                    <input asp-for="Username" class="form-control" placeholder="Nhập tên đăng nhập của bạn">
-                    <span asp-validation-for="Username" class="text-danger"></span>
+                    <label asp-for="UserNameOrEmail" class="form-label"></label><sup>*</sup>
+                    <input asp-for="UserNameOrEmail" class="form-control" placeholder="Nhập tên đăng nhập của bạn">
+                    <span asp-validation-for="UserNameOrEmail" class="text-danger"></span>
                 </div>
 
                 @* Mật khẩu *@
