--- a/project/Views/Shared/DSHangHoa.cshtml
+++ b/project/Views/Shared/DSHangHoa.cshtml
@@ -107,10 +107,11 @@
                             </div>
                             <div class="col-lg-12">
                                 <div class="position-relative">
-                                    <img src="img/banner-fruits.jpg" class="img-fluid w-100 rounded" alt="">
+                                    <img src="~/img/banner.png" class="img-fluid w-100 rounded" alt="">
+                                    @* Ghi đè lên ảnh
                                     <div class="position-absolute" style="top: 50%; right: 10px; transform: translateY(-50%);">
                                         <h3 class="text-secondary fw-bold">Fresh <br> Fruits <br> Banner</h3>
-                                    </div>
+                                    </div> *@
                                 </div>
                             </div>
                         </div>
