--- a/project/Views/HangHoa/QuanLySanPham.cshtml
+++ b/project/Views/HangHoa/QuanLySanPham.cshtml
@@ -1,8 +1,11 @@
-﻿@model project.ViewModels.ProductVM
+﻿@using static project.Helpers.PaginationHelper
+@model project.ViewModels.ProductVM
 
 @{
     ViewData["Title"] = "Quản lý sản phẩm";
-    var hangHoa = ViewBag.hangHoa as IEnumerable<project.Data.HangHoa>;
+    var pagedResult = ViewBag.PagedHangHoa as PagedResult<project.Data.HangHoa>;
+
+    var hangHoa = pagedResult?.Items;
 }
 
 @section Styles {
@@ -76,7 +79,7 @@
                                                 <label class="form-label my-3">Tải hình</label>
                                                 <img id="hinhPreview" src="" alt="Xem trước hình ảnh" class="img-fluid rounded mb-3 mt-2" style="max-width: 200px; display: none;" />
                                                 <div class="input-group">
-                                                    <input asp-for="Hinh" type="file" class="form-control" accept="image/*" aria-describedby="inputGroupFileAddon04" id="Hinh" aria-label="Upload">
+                                                    <input asp-for="Hinh" type="file" class="form-control" multiple accept="image/*,video/*" aria-describedby="inputGroupFileAddon04" id="Hinh" aria-label="Upload">
                                                 </div>
 
                                                 <span asp-validation-for="@Model.Hinh" class="text-danger"></span>
@@ -151,14 +154,14 @@
                         </div>
                         <div class="col-md-7">
                             <form asp-action="QuanLySanPham" asp-controller="HangHoa">
-                            <div class="input-group mb-4">
+                                <div class="input-group mb-4">
                                     <input type="search" class="form-control " placeholder="Tìm kiếm" aria-describedby="search-icon-1" name="query" value="@ViewBag.CurrentQuery">
-                                <button class="btn  btn-light border">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </div>
+                                    <button class="btn  btn-light border">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </div>
                             </form>
-                            <table class="table table-hover" >
+                            <table class="table table-hover">
                                 <thead>
                                     <tr>
                                         <th scope="col">Mã hh</th>
@@ -176,15 +179,15 @@
                                 <tbody>
                                     @if (TempData["Message"] != null)
                                     {
-                                        <tr >
+                                        <tr>
                                             <td colspan="9" class="text-center text-danger">
                                                 <i class="bi bi-exclamation-triangle-fill"></i>
                                                 @TempData["Message"]
-                                                </td>
-                                            
-                                            </tr>
-                                            
-                                       
+                                            </td>
+
+                                        </tr>
+
+
                                     }
                                     @if (hangHoa != null)
                                     {
@@ -197,7 +200,7 @@
                                             {
                                                 moTaNgan = moTaNgan.Substring(0, 20) + "...";
                                             }
-                                             if (!string.IsNullOrEmpty(tenRutGon) && tenRutGon.Length > 20)
+                                            if (!string.IsNullOrEmpty(tenRutGon) && tenRutGon.Length > 20)
                                             {
                                                 tenRutGon = tenRutGon.Substring(0, 20) + "...";
                                             }
@@ -218,10 +221,15 @@
 
                                             </tr>
                                         }
+
                                     }
 
                                 </tbody>
                             </table>
+                            @if (Model != null)
+                            {
+                                <partial name="Pagination" model="pagedResult" />
+                            }
                         </div>
                     </div>
                 </div>
