--- a/project/Views/Shared/MenuBar.cshtml
+++ b/project/Views/Shared/MenuBar.cshtml
@@ -4,7 +4,8 @@
     var currentAction = ViewContext.RouteData.Values["action"]?.ToString();
 }
 
-<div class="navbar-nav mx-auto ">
+
+<div class="navbar-nav  mx-auto ">
     <a asp-controller="Home" asp-action="Index" class="nav-item nav-link @(currentController == "Home" && currentAction == "Index" ? "active" : "") ">Home</a>
     <a asp-controller="HangHoa" asp-action="Index" class="nav-item nav-link @(currentController == "HangHoa" && currentAction == "Index" ? "active" : "")">Shop</a>
 
@@ -14,23 +15,23 @@
     {
         @if (User.IsInRole("1") || User.IsInRole("2"))
         {
-            <div class="dropdown me-3  d-flex align-items-center ps-3">
+            <div class="dropdown me-3 d-flex align-items-center ps-3 ">
                 <a class="dropdown-toggle text-dark" data-bs-toggle="dropdown" aria-expanded="false" href="#" role="button">Quản lý</a>
-            
-                <ul class="dropdown-menu dropdown-menu-end p-2">
+
+                <ul class="dropdown-menu dropdown-menu-lg-start p-2 text-center">
                     <li>
-                        <a asp-controller="HangHoa" asp-action="QuanLySanPham" class="nav-item nav-link @(currentController == "HangHoa" && currentAction == "QuanLySanPham" ? "active" : "")">Quản lý sản phẩm</a>
+                        <a asp-controller="HangHoa" asp-action="QuanLySanPham" class="nav-item  nav-link rounded-2 @(currentController == "HangHoa" && currentAction == "QuanLySanPham" ? "active" : "")">Quản lý sản phẩm</a>
                     </li>
                     <li>
-                        <a asp-controller="Loai" asp-action="Index" class="nav-item nav-link @(currentController == "Loai" && currentAction == "Index" ? "active" : "")">Quản Lý Loại</a>
+                        <a asp-controller="Loai" asp-action="Index" class="nav-item nav-link rounded-2 @(currentController == "Loai" && currentAction == "Index" ? "active" : "")">Quản Lý Loại</a>
                     </li>
                     <li>
-                        <a asp-controller="NhaCungCap" asp-action="Index" class="nav-item nav-link @(currentController == "NhaCungCap" && currentAction == "Index" ? "active" : "")">Quản Lý Nhà cung cấp</a>
+                        <a asp-controller="NhaCungCap" asp-action="Index" class="nav-item nav-link rounded-2 @(currentController == "NhaCungCap" && currentAction == "Index" ? "active" : "")">Quản Lý Nhà cung cấp</a>
                     </li>
                     @if (User.IsInRole("2"))
                     {
                         <li>
-                            <a asp-controller="KhachHang" asp-action="QuanLyTaiKhoan" class="nav-item nav-link @(currentController == "KhachHang" && currentAction == "QuanLyTaiKhoan" ? "active" : "")">Quản Lý tài khoản</a>
+                            <a asp-controller="KhachHang" asp-action="QuanLyTaiKhoan" class="nav-item nav-link rounded-2 @(currentController == "KhachHang" && currentAction == "QuanLyTaiKhoan" ? "active" : "")">Quản Lý tài khoản</a>
                         </li>
                     }
                 </ul>
