--- a/project/Views/Shared/_LayoutIndex.cshtml
+++ b/project/Views/Shared/_LayoutIndex.cshtml
@@ -105,7 +105,7 @@
     </div>
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
+    <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up text-white"></i></a>
 
 
     <!-- JavaScript Libraries -->
