--- a/project/wwwroot/css/style.css
+++ b/project/wwwroot/css/style.css
@@ -128,12 +128,12 @@
     border-bottom: 1px solid rgba(255, 255, 255, .1);
 }
 
-.navbar .navbar-nav .nav-link:hover,
-.navbar .navbar-nav .nav-link.active,
-.fixed-top.bg-white .navbar .navbar-nav .nav-link:hover,
-.fixed-top.bg-white .navbar .navbar-nav .nav-link.active {
-    color: var(--bs-primary);
-}
+    .navbar .navbar-nav .nav-link:hover,
+    .navbar .navbar-nav .nav-link.active,
+    .fixed-top.bg-white .navbar .navbar-nav .nav-link:hover,
+    .fixed-top.bg-white .navbar .navbar-nav  {
+        color: var(--bs-primary);
+    }
 
 .navbar .dropdown-toggle::after {
     border: none;
@@ -159,7 +159,7 @@
 
 .dropdown .dropdown-menu a:hover {
     background: var(--bs-secondary);
-    color: var(--bs-primary);
+    color: var(--bs-dark);
 }
 
 .navbar .nav-item:hover .dropdown-menu {
